--- a/video-edit1.html
+++ b/video-edit1.html
@@ -313,7 +313,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="range-container m-top10">
-                                                        <input class="range-input" type="range" id="subtitle-range" min="0" max="100" value="50">
+                                                        <input class=e"range-input" type="range" id="subtitle-range" min="0" max="100" value="50">
                                                         <div class="range-text flex">
                                                             <span>아래</span>
                                                             <span>위</span>
