--- a/projectV-complete.html
+++ b/projectV-complete.html
@@ -395,7 +395,7 @@
                 <!-- 컨텐츠 영역 -->
                 <section class="content-area">
                     <article class="content-wrap">
-                        <div class="content-inner making-inner">
+                        <div class="content-inner content-inner-m making-inner">
                             <!-- 썸네일 슬라이드바 -->
                             <div class="thumb-slide-contain" id="thumb-slide-contain">
                                 <div class="click-border-2 thumb-slide-box projectV-flex-box">
