--- a/video-edit1.html
+++ b/video-edit1.html
@@ -196,7 +196,7 @@
 
                             <div class="content-item m-top40">
                                 <div class="edit-title font-IBM">"원하는대로 자막을 편집해보세요 !"</div>
-                                <div class="content-item flex m-top20 edit-content">
+                                <div class="content-item edit-content flex wrap justify-center m-top20">
                                     <!-- 자막 편집 -->
                                     <div class="subtitle-wrap">
                                         <!-- 편집 선택 박스 -->
@@ -204,7 +204,7 @@
                                             <!-- 자막효과 -->
                                             <div class="edit-item flex wrap">
                                                 <h4 class="subtitle-edit-title">자막 효과</h4>
-                                                <ul class="subtitle-effect-wrap wrap m-top10">
+                                                <ul class="subtitle-effect-wrap wrap justify-start m-top10">
                                                     <li class="subtitle-effect-item">
                                                         <button type="button" class="effectBtn b-show">
                                                             <img src="img/edit/none-icon.svg" alt="효과없음">
@@ -313,7 +313,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="range-container m-top10">
-                                                        <input class=e"range-input" type="range" id="subtitle-range" min="0" max="100" value="50">
+                                                        <input class="range-input" type="range" id="subtitle-range" min="0" max="100" value="50">
                                                         <div class="range-text flex">
                                                             <span>아래</span>
                                                             <span>위</span>
@@ -389,9 +389,27 @@
                             </div>
                         </div>
 
-                        <!-- <div class="templateBtn-wrap">
-                            <button type="button" class="templaeteBtn">저장하기</button>
-                        </div> -->
+                        <div class="reprodct-control">
+                            <div class="video-time flex">
+                                <div class="flex">
+                                    <span>00:00</span>
+                                    <span>/</span>
+                                    <span>00:21</span>
+                                </div>
+                                <div class="control-btn-wrap">
+                                    <div class="speed-">
+                                        <button type="button">
+                                            <img src="" alt="배속 버튼 아이콘">1.0배속
+                                        </button>
+                                    </div>
+                                    <div class="reprodct-btn-conteiner">
+                                        <button class="reprodctBtn" type="button">
+                                            <img src="" alt="재생/멈춤 버튼">
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </article>
                 </section>
             </div>
