--- a/video-edit1.html
+++ b/video-edit1.html
@@ -231,6 +231,7 @@
                                                 <div class="picker-container">
                                                     <label for="effect-color-picker" class="none">자막 색상 선택</label>
                                                     <input class="color-picker" type="color" id="effect-color-picker" name="color">
+                                                    <!-- React Color 라이브러리 사용?-->
                                                 </div>
                                             </div>
                                             <!-- 폰트 -->
@@ -264,6 +265,7 @@
                                                 <div class="picker-container">
                                                     <label for="font-color-picker" class="none">자막 색상 선택:</label>
                                                     <input class="color-picker" type="color" id="font-color-picker" name="color">
+                                                    <!-- React Color 라이브러리 사용?-->
                                                 </div>
                                             </div>
                                             <!-- 테두리 -->
@@ -337,6 +339,7 @@
                                                         <div class="color-panel">
                                                             <label for="color-picker" class="none">자막 색상 선택:</label>
                                                             <input class="color-picker edit-picker" type="color" id="color-picker" name="color">
+                                                            <!-- React Color 라이브러리 사용?-->
                                                         </div>
                                                     </li>
                                                 </ul>
@@ -390,6 +393,7 @@
                         </div>
                     </article>
                     
+                    <!-- 영상 재생 영역 -->
                     <article class="reprodct-area m-top50">
                         <div class="reprodct-control">
                             <div class="video-time flex justify-between">
@@ -710,8 +714,6 @@
                 }
             });
         });
-
-
     </script>
 </body>
 </html>
